--- a/src/styles/productCard.css
+++ b/src/styles/productCard.css
@@ -16,3 +16,21 @@
   width: 100%;
   flex-grow: 1;
 }
+.distinguishContainer {
+  position: relative;
+}
+.onHoverText {
+  width: 100%;
+  height: 100%;
+  color: azure;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 300ms ease-out;
+}
+.onHoverText:hover {
+  opacity: 1;
+}
